# nowhere

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
lib/: database.py  database.sql  dynamic.py  merger.py  static.py  static_models.py
tools/: sample_query.sql
view/: index.html  main.css
